--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
         }
       </script>
 	<body>
-		<script type="module" src="/main.js"></script>
+		<script type="module" src="main.js"></script>
 	</body>
 </html>
